--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -32,6 +32,10 @@ background-color: $superbiriuza;
 color: $whitesmoke;
 }
 
+#vacantc {
+color: $MistyRose;
+}
+
 #broni {
 color: $reddarken4;
 background-color: $redlighten4;
