--- a/app/views/contracts/show.html.erb
+++ b/app/views/contracts/show.html.erb
@@ -1,246 +1,85 @@
 <% provide(:title, 'Контракт') %>
 
-<head>
-<%= include_gon %>	
-  <meta charset="utf-8">
-  <title>jQuery UI Accordion - Default functionality</title>
-  <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
-  <script src="//code.jquery.com/jquery-1.10.2.js"></script>
-  <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
-  <script type="text/javascript" charset="utf8" src="//cdn.datatables.net/1.10.9/js/jquery.dataTables.js"></script>
-  <link rel="stylesheet" href="/resources/demos/style.css">
-  <script>
-  function matrixArray(rows,columns){
-  var arr = new Array();
-  for(var i=0; i<columns; i++){
-    arr[i] = new Array();
-    for(var j=0; j<rows; j++){
-      arr[i][j] = 0;//вместо i+j+1 пишем любой наполнитель. В простейшем случае - null
-    }
-  }
-  return arr;
-}
-  
-  function SetDayPrice (event){
-             
-             var ptmp = $("#temp").val();
-             var summ = $("#summ").val()/ptmp;
-             var car = $("#car_id").val();
-             var price =  <%= Car.count %>;
-             var matr = matrixArray(<%= Car.count %>,12);
-             var count = <%= Car.count %>;
-             var num = Number(0);
-             <% i = 1%>
-             
-  			 
-  		//	for (var k=0; k <= 10;k += 2)
-  		var k = 1;
-  		$("#daycost").val(gon.carints[car][k+1]);
-  		while (k<13)
-  			{
-  				if (gon.carints[car][k] <= Number(ptmp))
-  				{
-  					
-  					$("#daycost").val(gon.carints[car][k+1]);
-  				}
-            	 k += 2;   
-            } 	
-        
-        SetTotalPrice(event);             
-        }    
-
-	function SetTotalPrice (event){
-            var chCode = ('charCode' in event) ? event.charCode : event.keyCode;
-            
-             $("#dni").val($("#temp").val());
-             var ptmp = $("#temp").val();
-             var summ = ptmp*$("#daycost").val();
-             
-             $("#summ").val(summ);	            
-    }
-
-    
-    function GetChar (event){
-            var chCode = ('charCode' in event) ? event.charCode : event.keyCode;
-            
-             $("#dni").val($("#temp").val());
-             var dtmp = $("#dt").val();
-             var nd = dtmp[3] + dtmp[4] + "/" + dtmp[0] + dtmp[1] + "/" + dtmp[6] + dtmp[7] + dtmp[8] + dtmp[9];
-             var d = new Date(nd)
-             var dd = Number($("#temp").val());
- 			 d.setDate( d.getDate() + dd)	
-         	 var mm = d.getMonth()+1;
-				mm = (mm<10?"0"+mm:mm);
-			 var days = d.getDate();
-				days = (days<10?"0"+days:days);	
-             $("#dt1").val(days);
-             $("#dt1").val($("#dt1").val() +"."+(mm));
-             $("#dt1").val($("#dt1").val() +"."+ (d.getFullYear()) );
-             SetDayPrice(event);     
-    }
-    
-    function GetEndDate (event){
-            var chCode = ('charCode' in event) ? event.charCode : event.keyCode;
-            
-             $("#dni").val($("#temp").val());
-             var dtmp1 = $("#dt").val();
-             var dtmp2 = $("#dt1").val();
-             var newdate = (Date(dtmp2) - Date(dtmp1))
-             $("#temp").val(Date(newdate))
-             
-             
-         var dtmp = $("#dt").val();
-         var nd = dtmp[3] + dtmp[4] + "/" + dtmp[0] + dtmp[1] + "/" + dtmp[6] + dtmp[7] + dtmp[8] + dtmp[9];
-         var dtmp1 = $("#dt1").val();
-         var nd1 = dtmp1[3] + dtmp1[4] + "/" + dtmp1[0] + dtmp1[1] + "/" + dtmp1[6] + dtmp1[7] + dtmp1[8] + dtmp1[9];
-         var start = new Date(nd);
-		 var end = new Date(nd1);
- 		 var diff = new Date(end - start);
-		 var days = diff/1000/60/60/24;
-		 $("#temp").val(days)
-			SetDayPrice(event);
-    }
-  
-  
-    function myFunction(a,b) 
-    {  
-	    var text = a;   
-	    $("#client_id").val(a);
-	    $("#client_info").val(b);
-    }
-
-	 $(document).ready( function () {
-	    $('#m2').dataTable( {
-	    	 "order": [[ 1, "asc" ],[ 2, "asc" ],[ 3, "asc" ]]
-	 } );
-	} );
- 
-  $(function() {
-    $("#pan1").toggle()
-    $("#rem2").toggle()
-    $("#clname").attr('disabled', 'disabled');    
-  });
-  
-  $(function() {
-  $("#rem1").change( function() {
-    $("#pan1").toggle()
-    $("#pan2").toggle()
-    $("#lrem2").toggle()
-    $("#rem2").toggle()
-    $("#pser").toggle()
-    $("#clname").toggle()
-    $("#lclinf").toggle()
-    $("#client_info").toggle()
-  });
-  });
-  
-  $(function() {
-  $("#rem2").change( function() {
-    $("#pan2").toggle()
-    $("#lrem1").toggle()
-    $("#lclinf").toggle()
-    $("#client_info").toggle()
-    $("#rem1").toggle()
-    $("#pser").toggle()
-  });
-  });
-  
-  function disableElements()
-  {
-   document.getElementById("#clname").disabled=true;
-  }
-  
-  $(function() {
-    $( "#dt" ).datepicker({
-      changeMonth: true,
-      changeYear: true,
-      dateFormat: 'dd.mm.yy' }).val();
-       
-    $( "#format" ).change(function() {
-      $( "#dt" ).datepicker( "option", "dateFormat", $( this ).val() );
-    });
-  });
-  
-    $(function() {
-    $( "#dt1" ).datepicker({
-      changeMonth: true,
-      changeYear: true,
-      dateFormat: 'dd.mm.yy' }).val();
-       
-    $( "#format" ).change(function() {
-      $( "#dt1" ).datepicker( "option", "dateFormat", $( this ).val() );
-    });  
-  });
-  
-  </script>
-</head>
- 
- <div class="row">
+   <div class="row">
+  	<div id="pan1" class="panel panel-info">
+  	  <div class="panel-heading">Просмотр<%= if @contract.flag == 1 then  " брони"  else " контракта" end %><%= " № #{@contract.id}/#{@contract.cnum} от #{@contract.order_date.strftime('%d.%m.%Y')}" %></strong></div> 		
+	  <div class="panel-body">
  	
-  <%= simple_form_for @contract do |f| %>	
-  <div class="large-4 columns"> 	
-  	  <div class="panel panel-info">
-  	  	<div class="panel-heading"><strong><%= if @contract.flag == 1 then "Редактирование брони № #{@contract.id}/#{@contract.cnum}" else "Редактирование контракта № #{@contract.id}/#{@contract.cnum}" end %></strong></div>
-  	  	<div class="panel-body">
+  		<%= simple_form_for @contract do |f| %>
+  			
+		<div class="large-6 columns">
+		<div class="panel  panel-default">		  	
+		<div class="panel-body">
         
-    	<%= f.input :cnum, label: "Номер", as: :string %>
-    	<%= f.input :flag, :as => :hidden  %>    	
-    	  	    	
-    	<a><label id="lrem1" for="rem_lab"><%= check_box_tag 'active','1',false, :id => "rem1" %>Создать нового клиента </label></a>
-	    <a><label id="lrem2" for="rem_lab"><%= check_box_tag 'active','0',false, :id => "rem2" %>Клиент</label></a>    	
-    	<%= text_field_tag 'client_info', if @contract.client then "#{@contract.client.sname} #{@contract.client.name} #{@contract.client.fname}" else "не указан" end , :readonly => true, class: "form-control" %>	   	
-    	<%= f.hidden_field :client_id , :id => "client_id" %>
-    	
-    	<%= hidden_field_tag 'vc', controller.controller_name %>
-    	<%= hidden_field_tag 'va', controller.action_name %>
-    	<%= hidden_field_tag 'flag', @contract.flag %>
+	    	<%= f.input :cnum, label: "Номер", as: :string, :readonly => true %>
+	    	<%= f.input :flag, :as => :hidden  %>    	
+	    	  	    	   	
+	    	<label for="client_info" class="control-label"><%= "Клиент" %></label>
+	    	<%= text_field_tag 'client_info', if @contract.client then "#{@contract.client.sname} #{@contract.client.name} #{@contract.client.fname}" else "не указан" end , :readonly => true, class: "form-control" %>	   	
+	    	<%= f.hidden_field :client_id , :id => "client_id" %>
+	    	
+	    	<%= hidden_field_tag 'vc', controller.controller_name %>
+	    	<%= hidden_field_tag 'va', controller.action_name %>
+	    	<%= hidden_field_tag 'flag', @contract.flag %>
+	
+	    	<%= f.input :order_date, :as => :hidden %>
+	    	<%= f.input :user_id, :value => if @contract.user_id.nil? then current_user.id else @contract.user_id end ,:as => :hidden %>
+	    	<%= f.association :user, label: "Агент", :label_method => lambda { |user| "#{user.username}"}, value_method: :id, include_blank: false, selected: if @contract.user.nil? then current_user.id else @contract.user.id end, :readonly => true %>
+	
+	    	<!--<%= f.association :car, label: "Авто",:label_method => lambda { |car| "#{car.marca}  #{car.gnum}"}, value_method: :id, include_blank: false, :onchange =>"GetChar (event);" %>-->
+	    	<div class="form-group">
+	          	<label for="car_id" class="control-label">Автомобиль</label>		
+	    	  	<%= select_tag "car_id", options_for_select(Car.all.collect {|p| [ p.marca + " "+p.gnum, p.id ] }, @contract.car_id), :onchange =>"GetChar (event);", include_blank: false, class: "form-control", :readonly => true %>
+	    	</div>
+	    	
+	        <%= f.input :garant_summ, label: "Гарантийная сумма, #{$valuta}", as: :integer, :readonly => true %>	    	
 
-    	<%= f.input :order_date, :as => :hidden %>
-    	<%= f.input :user_id, :value => if @contract.user_id.nil? then current_user.id else @contract.user_id end ,:as => :hidden %>
-    	<%= f.association :user, label: "Агент", :label_method => lambda { |user| "#{user.username}"}, value_method: :id, include_blank: false, selected: if @contract.user.nil? then current_user.id else @contract.user.id end, :readonly => true %>
-
-    	<!--<%= f.association :car, label: "Авто",:label_method => lambda { |car| "#{car.marca}  #{car.gnum}"}, value_method: :id, include_blank: false, :onchange =>"GetChar (event);" %>-->
-    	<div class="form-group">
-          	<label for="car_id" class="control-label">Автомобиль</label>		
-    	  	<%= select_tag "car_id", options_for_select(Car.all.collect {|p| [ p.marca + " "+p.gnum, p.id ] }, @contract.car_id), :onchange =>"GetChar (event);", include_blank: false, class: "form-control" %>
-    	</div>
-    	<div class="form-group">
-	    	<label for="stdate" class="control-label">Дата начала договора</label>
-	    	<%= text_field_tag 'stdate', @contract.stdate.strftime('%d.%m.%Y'), :id => "dt",:onchange =>"GetChar (event);", class: "form-control" %>
-    	</div> 
-         
-        <% if @contract.flag == 2 then %> 
-    	<%= f.input :sttime, as: :time ,label: "Время начала договора" , default: Time.parse(@contract.sttime.strftime('%R')) %>
-    	<% end %>
+	    	<% if @contract.flag != 1 then %>
+				<%= f.input :zalog, label: "Залог, #{$valuta}", as: :integer, :readonly => true %>
+				<%= f.input :curs, label: "Курс, лей", :readonly => true %>		
+	    	<% end %>
     	
-  		<%= label_tag 'Кол-во дней' %>
-    	<input size="40" value="1" onkeyup="GetChar (event);" id="temp" />
-    	
-    	<div class="form-group">
-    		<label for="stdate" class="control-label">Дата окончания договора</label>
-    		<%= text_field_tag 'enddate', @contract.enddate.strftime('%d.%m.%Y'), :id => "dt1",:onchange =>"GetEndDate (event);", class: "form-control" %>
-    	</div>
-    	
-    	<% if @contract.flag == 2 then %> 
-    	<%= f.input :endtime, as: :time ,label: "Время окончания договора" , default: Time.parse(@contract.endtime.strftime('%R')) %>    	
-    	<% end %>
-    	
-    	<%= f.input :garant_summ, label: "Гарантийная сумма", as: :integer %>
-    	 
-    	<%= label_tag 'Цена в день' %>
-    	<input size="40"  onkeyup="SetTotalPrice (event);" id="daycost", readonly = true/>
-    	
-        <% if @contract.flag == 2 then %> 
-    	<%= label_tag 'Сумма договора' %>
-    	<%= text_field_tag 'summ', @contract.summ ,:onkeyup =>"SetDayPrice (event);", :readonly => true %>
-    	<% end %> 
-   	
-	    <center><%= f.button :submit, "Отмена", class: "btn btn-warning", name: "cancel" %></center>
-	    
-	  </div> <!--panel-body--->    
-	</div> <!--panel--> 	
- </div>
-
- <% end %>
+ 	    </div>
+		</div>
+		</div>
     
-</div> <!--row--> 	
+		<div class="large-6 columns">
+		<div class="panel  panel-default">
+		<div class="panel-body">		       	
+    	<div class="form-group">
+		    <label for="stdate" class="control-label">Дата начала договора</label>
+		    	<%= text_field_tag 'stdate', @contract.stdate.strftime('%d.%m.%Y'), :id => "dt",:onchange =>"GetChar (event);", class: "form-control", :readonly => true %>
+	    	</div> 
+	         
+	        <% if @contract.flag != 1 then %> 
+	    	<%= f.input :sttime, as: :time ,label: "Время начала договора" , default: Time.parse(@contract.sttime.strftime('%R')), :readonly => true %>
+	    	<% end %>
+	    	
+	    	<%= f.input :dperiod, label: 'Кол-во дней', :readonly => true, input_html: {value: @daysinperiod} %>	
+	    	
+	    	<div class="form-group">
+	    		<label for="enddate" class="control-label">Дата окончания договора</label>
+	    		<%= text_field_tag 'enddate', @contract.enddate.strftime('%d.%m.%Y'), :id => "dt1",:onchange =>"GetEndDate (event);", class: "form-control", :readonly => true %>
+	    	</div>
+	    	
+	    	<% if @contract.flag != 1 then %> 
+	    		<%= f.input :endtime, as: :time ,label: "Время окончания договора" , default: Time.parse(@contract.endtime.strftime('%R')), :readonly => true %>    	
+	    	<% end %>		
+	    	     	
+	    	<%= f.input :price, label: "Цена в день, #{$valuta}", :readonly => true, input_html: {value: @pretperday} %>  
+	    	     	
+	        <% if @contract.flag != 1 then %> 
+		    	<%= f.input :summ, label: "Сумма договора, #{$valuta}", :readonly => true %>			    	
+		    	<%= f.input :costlei, label: "Сумма, лей", as: :decimal, :readonly => true %>	    	
+	    	<% end %>
+    	</div>
+		</div>
+		</div> 
+   	
+	    <center><%= f.button :submit, "Редактировать", class: "btn btn-primary", name: "editfromshow" %> <%= f.button :submit, "Печать", class: "btn btn-info", name: "printfromshow" %> <%= f.button :submit, "Отмена", class: "btn btn-warning", name: "cancel" %></center>
+	    
+  		<% end %>
+  	  </div> <!--panel body-->	
+    </div> <!--panel-->		
+ </div><!--row-->   
+ 	
