--- a/app/views/cars/smonth.html.erb
+++ b/app/views/cars/smonth.html.erb
@@ -236,7 +236,7 @@
 							    <% end %>
 								<% if (r[d+2].nil?) then %>
 								    <% graphcurid = "vacantc" %>
-								    <% graphcurtext = "." %>
+								    <% graphcurtext = "..." %>
 						            <% graphcurlink0 = link_to 'Бронь новая', contracts_newbroni_path(:car_id => graphcurcar, :stdate => graphstdate) %>
 						            <% graphcurlink1 = link_to 'Контракт новый', contracts_new_path(:car_id => graphcurcar, :stdate => graphstdate) %>								                                          
 								<% end %>
