--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,8 @@
+<div class="container-fluid">
 <header class="navbar navbar-fixed-top">
   <div class="navbar-inner navbar-inverse">
-    <div class="container">
-      <div class="row">		
+    <div class="container-fluid menucontainer-fluid">
+      <div class="row-fluid">		
       <%= link_to "AUTO10 #{image_tag('holub-ifon.png', :alt => 'image', :width => "40", :height => "35")}".html_safe, '#', id: "logo" %>
         <nav>
             <ul class="nav nav-pills pull-right">           
@@ -17,8 +18,8 @@
       </div>
    </div>
   <div class="navbar-default">  
-   <div class="container">
-   	  <div class="row">	
+   <div class="container-fluid menucontainer-fluid">
+   	  <div class="row-fluid">	
    	  <% if !current_user.nil? %>
         <%= image_tag('octo.jpg', :alt => "image", :width => "20", :height => "20") %>
         <%= "Пользователь: #{current_user.email}" %>  
@@ -28,10 +29,11 @@
   </div>
  </div>
  <div class="navbar-default">  
-   <div class="container">
-   	  <div class="row">
+   <div class="container-fluid menucontainer-fluid">
+   	  <div class="row-fluid">
 		<%= render 'layouts/nvbar' %>
       </div>        
   </div>
  </div> 
 </header>
+</div>
