--- a/app/views/contracts/edit.html.erb
+++ b/app/views/contracts/edit.html.erb
@@ -1,5 +1,5 @@
 
-<% provide(:title, if @contract.flag == 2 then 'Контракт' else 'Бронь' end) %>
+<% provide(:title, if (@contract.flag == 2 or @contract.flag == 3) then 'Контракт' else 'Бронь' end) %>
 
 <%= render 'newbronicontract' %>
 
