--- a/app/views/contracts/show.html.erb
+++ b/app/views/contracts/show.html.erb
@@ -39,7 +39,7 @@
 	    	</div>
 	    	
 	        <div class="col-md-6">
-	        <%= f.input :garant_summ, label: "Гарантийная сумма, #{$valuta}", as: :integer, :readonly => true %>
+	        <%= f.input :garant_summ, label: "Гарантийная сумма", as: :string, :readonly => true %>
 	        </div>	    	
 
 	    	<% if @contract.flag != 1 then %>
